--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,14 +34,6 @@ body{
 		text-align:center;
 		overflow:hidden;
 	}
-
-	.wrap{
-		width: 1180px;
-		height: 100%;
-		margin-left: auto;
-		margin-right: auto;
-		position: relative;
-	}
 	.box{
 		text-align: left;
 		color: #808080;
@@ -53,7 +45,64 @@ body{
 	/* Section 0
 	* --------------------------------------- */
 	#section0 {
-		background-image: url(../imgs/tnl.bmp);
+		background-image: url(../imgs/beta_2_2.bmp);
+		background-size: 100% 150%;
+		background-position: center bottom;
+	}
+	
+	#login
+	{
+		position: absolute;
+		width: 15.5em;
+		height: 11em;
+		background: url(../imgs/authbg.png) 100% 100% no-repeat;
+		right:3em;
+		top:3em;
+	}
+	
+	#about
+	{
+		position: absolute;
+		left:1em;
+		top:3em;
+	}
+	
+	@font-face {
+		font-family: visitor;
+		src: url(fonts/visitor1.ttf);
+	}
+	
+	#about .quote
+	{
+		color:white;
+		font-size:2em;
+		width:14em;
+		display:inline-block;
+		text-shadow: 1px 1px 5px #000;
+	}
+	
+	.button1{
+		border-radius:5px;
+		border: 1px solid white;
+		margin: auto;
+		margin-top: 2.5em;
+		width: 10em;
+		font-decoration:none;
+	}
+	
+	.button1:hover{
+		box-shadow: 0 0 20px 5px #fff;
+	}
+	
+	.button1>a{
+		color:#333;
+		display:block;
+		width: 10em;
+		margin: -1px;
+	}
+	
+	.button1>a:hover{
+	
 	}
 
 	#myVideo{
@@ -84,10 +133,30 @@ body{
 		left: 0;
 		top: 43%;
 	}
+	
 
 
 	/* Section 1
 	* --------------------------------------- */
+	#section0 .videobg
+	{
+		background-color:black;
+		opacity:0.85;
+		width:100%;
+		height:100%;
+	}
+	#section0 .videoframe
+	{
+		position:relative;
+		top: 20%;
+	}
+	#section0 iframe
+	{
+		border:0.5em solid #ccc;
+		border-radius: 5px;
+		margin: auto;
+	}
+	
 	#section1 img{
 		position:absolute;
 		left: 40px;
