Improved Auth inputs. Added private cab page and left menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,5 @@
 body{
-		color: #333;
+		/*color: #333;*/
 		font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
 	}
 
