--- a/assets/css/auth.css
+++ b/assets/css/auth.css
@@ -3,10 +3,19 @@
 		background: fixed url(../imgs/logo.png) center top no-repeat,black;
 		color: #333;
 		font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
+		overflow-y:scroll;
 	}
 	a
 	{
 		text-decoration:none;
+	}
+	.spoiler_body 
+	{
+		display:none;
+	}
+	.spoiler_links 
+	{
+		cursor:pointer;
 	}
 	.main-box
 	{
@@ -17,35 +26,141 @@
 		margin:auto;
 		margin-top:20%;
 		padding: 10px;
+		margin-bottom: 5%;
 	}
 	.button2
 	{
 		display:inline-block;
-		border:1px solid black;
 		margin: auto;
 		width:200px;
 		margin-left:7%;
+		background-color:#2196F3;
+		padding:10px;
+		border:1px dashed #000;
 	}
 	.button2>a{
-		color:#333;
-		display:block;
-	}
-	#login:hover .signin
-	{
-		display:block;
-	}
-	#register:hover .signup
-	{
+		color:#fff;
 		display:block;
 	}
 	.signin,.signup
 	{
-		margin-top:1px;
-		width:200px;
-		position:absolute;
-		display:none;
+		transition: 0s 9999999s;
+		margin-top:10px;
 		background:white;
 		border-radius:5px;
 		padding:10px;
+		width:300px;
+		margin:auto;
+		display:none;
+	}
+	.label-box
+	{
+		position: relative;
+	}
+	#i1:focus ~ #lb1 label,
+	#i2:focus ~ #lb2 label,
+	#i3:focus ~ #lb3 label,
+	#i4:focus ~ #lb4 label,
+	#i5:focus ~ #lb5 label,
+	#i6:focus ~ #lb6 label,
+	#i7:focus ~ #lb7 label,
+	#i8:focus ~ #lb8 label,
+	#i9:focus ~ #lb9 label,
+	#i10:focus ~ #lb10 label,
+	#i11:focus ~ #lb11 label,
+	#i1:valid ~ #lb1 label,
+	#i2:valid ~ #lb2 label,
+	#i3:valid ~ #lb3 label,
+	#i4:valid ~ #lb4 label,
+	#i5:valid ~ #lb5 label,
+	#i6:valid ~ #lb6 label,
+	#i7:valid~ #lb7 label,
+	#i8:valid ~ #lb8 label,
+	#i9:valid ~ #lb9 label,
+	#i10:valid ~ #lb10 label,
+	#i11:valid ~ #lb11 label{
+		font-size: 14px;
+		transform: TranslateY(-20px);
+		color:#757575;
+		font-weight:bolder;
+	}
+	input[type="submit"]
+	{
+		background-color:#0D47A1;
+		border-radius:10px;
+		color:#fff;
+		height:30px;
+	}
+	input
+	{
+		box-sizing: border-box;
+		border:none;
+		width: 300px;
+		height:20px;
+		margin-top:25px;
+		color:#90CAF9;	
+		background-color:#fff;
+		font-weight:500;
+	}
+	label
+	{
+		font-size:18px;
+		position:absolute;
+		pointer-events:none;
+		color:#757575;
+		top:-25px;
+		transition: 0.2s ease all;
+		font-family:arial;
+	}
+	.label-box::before
+	{
+		content:'';
+		position: absolute;
+		height: 2px;
+		width: 10%;
+		bottom: 1px;
+		left: 50%;
+		background-color:#2196F3;
+		transition-property: width;
+		transition-duration: 0.5s;
+	}
+	.label-box::after
+	{
+		content:'';
+		position: absolute;
+		height: 2px;
+		width: 10%;
+		bottom: 1px;
+		right: 50%;
+		background-color:#2196F3;
+		transition-property: width;
+		transition-duration: 0.5s;
+	}
+	
+	
+	#i1:focus ~ #lb1::before,
+	#i2:focus ~ #lb2::before,
+	#i3:focus ~ #lb3::before,
+	#i4:focus ~ #lb4::before,
+	#i5:focus ~ #lb5::before,
+	#i6:focus ~ #lb6::before,
+	#i7:focus ~ #lb7::before,
+	#i8:focus ~ #lb8::before,
+	#i9:focus ~ #lb9::before,
+	#i10:focus ~ #lb10::before,
+	#i11:focus ~ #lb11::before,
+	#i1:focus ~ #lb1::after,
+	#i2:focus ~ #lb2::after,
+	#i3:focus ~ #lb3::after,
+	#i4:focus ~ #lb4::after,
+	#i5:focus ~ #lb5::after,
+	#i6:focus ~ #lb6::after,
+	#i7:focus ~ #lb7::after,
+	#i8:focus ~ #lb8::after,
+	#i9:focus ~ #lb9::after,
+	#i10:focus ~ #lb10::after,
+	#i11:focus ~ #lb11::after
+	{
+		width:50%;
 	}
 	
