--- a/assets/css/judge.css
+++ b/assets/css/judge.css
@@ -148,6 +148,7 @@ body
 
 
 .new_participants {
+	position: relative;
 	width: 120px;
 	height: 120px;
 
@@ -160,6 +161,15 @@ body
 	
 	margin: auto;
 	margin-bottom: 10px;
+
+	box-shadow: 0px 1px 5px rgba(0, 0, 0, .5);
+}
+
+.new_participants > .default_logo {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
 }
 
 .new_participant_button:hover {
