--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -46,7 +46,7 @@ body{
 	/* Section 0
 	* --------------------------------------- */
 	#section0 {
-		background-image: url(../imgs/beta_2_2.bmp);
+		background-image: url(../imgs/background.jpg);
 		background-size: 100% 150%;
 		background-position: center bottom;
 	}
@@ -54,11 +54,10 @@ body{
 	#login
 	{
 		position: absolute;
-		width: 16em;
-		height: 11em;
-		background: url(../imgs/authbg.png) 100% 100% no-repeat;
-		right:3em;
-		top:3em;
+		width: 20em;
+		height: 15em;
+		right:1em;
+		top:6em;
 	}
 	
 	#about
@@ -76,37 +75,45 @@ body{
 	#about .quote
 	{
 		color:white;
-		font-size:2em;
+		font-size:3em;
 		width:14em;
 		display:inline-block;
-		text-shadow: 1px 1px 5px #000;
+		text-shadow: 1px 1px 10px #73a4ff;
 	}
-	
+    
+    #about .down a{
+        margin-left:auto;
+        margin-right:auto;
+    }
+
+    .center {
+ 	    padding: 10px;
+        color:white;
+    }
+
 	.button1{
-		border-radius:5px;
-		border: 1px solid white;
-		margin: auto;
-		margin-top: 2.5em;
-		width: 10em;
-		font-decoration:none;
+		border-radius:10px;
+		border: 4px solid white;
+		margin-top: 3em;
+		width: 15em;
 	}
 	
 	.button1:hover{
-		box-shadow: 0 0 20px 5px #fff;
+		border-radius:10px;
+		border: 4px solid #73a4ff;
+		margin-top: 3em;
+		width: 15em;
+        box-shadow: 0 0 40px 15px #73a4ff;
 	}
 	
 	.button1>a{
-		color:#333;
+		color:white;
 		display:block;
-		width: 10em;
-		margin: -1px;
-	}
-	
-	.button1>a:hover{
-	
+		text-align:center;
+		margin: 3px;
 	}
 
-	#myVideo{
+    #myVideo{
 		position: absolute;
 		right: 0;
 		bottom: 0;
@@ -142,7 +149,7 @@ body{
 	#section0 .videobg
 	{
 		background-color:black;
-		opacity:0.85;
+		opacity:0.90;
 		width:100%;
 		height:100%;
 	}
