--- a/assets/bootstrap/css/app.css
+++ b/assets/bootstrap/css/app.css
@@ -32,14 +32,11 @@ body {
 .organization {
 	float: left;
 	padding-top: 20px;
-	padding-left: 35px; 
-
-	margin-left: 50px;
-	
+	padding-left: 5px; 
+	margin-left: 25px;
 }
 
 .logo_img {
-	width: 150px;
 	height: 150px;
 }
 
@@ -47,6 +44,7 @@ body {
 	width: 100%;
 	height: 100%;
 	padding-top: 20px;
+    margin-top: 30px;
 }
 
 
