--- a/assets/css/judge.css
+++ b/assets/css/judge.css
@@ -108,7 +108,7 @@ body
 }
 
 /* NEW Participant */
-.new_participant {
+.new_participant  {
 	list-style: none;
 }
 .new_participant > li {
@@ -184,7 +184,7 @@ body
 	margin-top: 3px;
 }
 
-.rm_participant {
+.rm_participant, .rm_participant1 {
 	cursor: pointer;
 	padding: 0px;
 
@@ -196,6 +196,8 @@ body
 	border: 1px solid rgba(0, 0, 0, .2);
 	box-shadow: inset(1px 3px 5px rgba(0, 0, 0, .4)); 
 	padding: 10px;
+
+	display: none;
 }
 
 .pronwe_title {
@@ -247,6 +249,11 @@ ul.team_info {
 	color: #FFF3E0;
 	font-weight: bold;
 	font-size: 13px;
+}
+
+/*==========*/
+#t_edit, #t_remove {
+	cursor: pointer;
 }
 
 
