--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -94,17 +94,16 @@ body{
 	.button1{
 		border-radius:10px;
 		border: 4px solid white;
-		margin-top: 3em;
+		margin-top: 1.5em;
 		width: 15em;
         height:3em;
+		transition:0.75s;
 	}
 	
 	.button1:hover{
-		border-radius:10px;
-		border: 4px solid #73a4ff;
-		width: 15em;
-        height:3em;
-        box-shadow: 0 0 40px 15px #73a4ff;
+        box-shadow: 1px 1px 2px 1px #333,
+					0 0 20px 1px #fff;
+		background-color:rgba(33,150,243,0.4);
 	}
 	
 	.button1>a{
@@ -114,6 +113,7 @@ body{
 		width: 15em;
         height:3em;
         padding-top:0.5em;
+		text-decoration:none;
 	}
 
     #myVideo{
