--- a/assets/css/auth.css
+++ b/assets/css/auth.css
@@ -3,7 +3,7 @@ body
 		background: url(../imgs/main_logo.png) center top no-repeat, black;
 		background-size: 100% 100%;
 		font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
-		overflow-y:scroll;
+		overflow-y:hidden;
 	}
 	a
 	{
@@ -41,8 +41,8 @@ body
     .button2
 	{
 		display:inline-block;
-        border-radius:5px;
-        border: 3px solid white;
+        border-radius:10px;
+        border: 2px solid white;
         margin-top: 3em;
         margin-left:10%;
         width:200px;
