--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,12 @@
-body{
-		/*color: #333;*/
-		font-family: "Lucida Grande", "Lucida Sans Unicode", Helvetica, Arial, Verdana, sans-serif;
-		
+	@font-face 
+	{
+		font-family: Exo2;
+		src: url(Exo2-Medium.ttf);
 	}
-
-
+	body{
+		font-family:Exo2;
+	}
+	
 	/* Style for our header texts
 	* --------------------------------------- */
 	h1{
@@ -18,10 +20,7 @@ body{
 		margin: 0 0 18px 0;
 		font-family: arial,helvetica;
 	}
-
-
-
-
+	
 	/* Common styles
 	* --------------------------------------- */
 	img{
@@ -41,7 +40,101 @@ body{
 		font-size: 1.2em;
 		line-height: 1.6em;
 	}
-
+		/* Get ready section */
+	.getready
+	{
+		border:5px solid #555;
+		border-bottom-style:none;
+		border-top-style:none;
+		border-radius:10px;
+		width:70%;
+		margin: auto;
+		padding-top:1%;
+		padding-bottom:1%;
+	}
+	/*.getbutton
+	{
+		border:2px solid #555;
+		display:inline-block;	
+		margin-top:5%;
+		border-radius:15px;
+		transition:0.75s;
+	}
+	.getbutton:hover
+	{
+        box-shadow: 1px 1px 2px 1px #333,
+					0 0 20px 1px #fff;
+	}
+	.getbutton:hover>a
+	{
+        color:#1565C0;
+	}
+	.getbutton:active>a
+	{
+        color:#fff;
+		text-shadow:1px 1px 10px #555;
+	}
+	.getbutton a
+	{
+		display:inline-block;
+		padding:5%;
+		width:15em;
+		margin:-2px;
+		font-size:1.5em;
+		text-decoration:none;
+		color:#555;
+	}*/
+	.getbutton
+	{
+		margin-top:5%;
+	}
+	.getbutton button:hover
+	{
+        box-shadow: 1px 1px 2px 1px #333,
+					0 0 20px 1px #fff;
+		color:#1565C0;
+	}
+	.getbutton button:active
+	{
+		color:#fff;
+		text-shadow:1px 1px 15px #555;
+	}
+	.getbutton button
+	{
+		display:inline-block;
+		width:15em;
+		padding:2%;
+		margin:-2px;
+		font-size:1.5em;
+		color:#555;
+		background-color:#fff;
+		border:2px solid #555;
+		border-radius:15px;
+		transition-property:color;
+		transition:0.5s;
+	}
+	.getready a
+	{
+		color:#1565C0;
+		text-decoration:none;
+	}
+	.getready a:hover
+	{
+		border-bottom:1px dashed #1565C0;
+	}
+	.getready p{
+		font-size: 1.5em;
+		margin: 0 0 18px 0;
+	}
+	.getready>.quote
+	{
+		color:white;
+		font-size:2.5em;	
+		display:inline-block;
+		
+		text-shadow: 1px 1px 10px #1E88E5,
+		1px 1px 3px #000;
+	}
 
 	/* Section 0
 	* --------------------------------------- */
@@ -94,17 +187,16 @@ body{
 	.button1{
 		border-radius:10px;
 		border: 4px solid white;
-		margin-top: 3em;
+		margin-top: 1.5em;
 		width: 15em;
         height:3em;
+        transition:0.75s;
 	}
 	
 	.button1:hover{
-		border-radius:10px;
-		border: 4px solid #73a4ff;
-		width: 15em;
-        height:3em;
-        box-shadow: 0 0 40px 15px #73a4ff;
+		box-shadow: 1px 1px 2px 1px #333,
+					0 0 20px 1px #fff;
+		background-color:rgba(33,150,243,0.4);
 	}
 	
 	.button1>a{
@@ -114,6 +206,7 @@ body{
 		width: 15em;
         height:3em;
         padding-top:0.5em;
+        text-decoration:none;
 	}
 
     #myVideo{
@@ -404,4 +497,7 @@ ul.teams {
 	border: 1px solid #424242;
 
 	overflow: scroll;
+}
+.sender{
+	
 }
