--- a/assets/css/auth.css
+++ b/assets/css/auth.css
@@ -48,21 +48,15 @@ body
         width:200px;
         height:3em;
         color:white;
+		background-color:rgba(33,150,243,0.4);
+		text-decoration:none;
+		transition:0.75s;
 	}
-    .button2:focus{
-        border-radius:5px;
-		border: 3px solid white;
-        width:200px;
-        height:3em;
-		color:white;
-    }
     .button2:hover{
-        border-radius:10px;
-		border: 4px solid #73a4ff;
-        width:200px;
-        height:3em;
-		box-shadow: 0 0 40px 15px #73a4ff;
-        color:white;
+		border-color:#ccc;
+		box-shadow: 1px 1px 2px 1px #333,
+					0 0 20px 1px #fff;
+		background-color:rgba(33,150,243,1);
     }
 	.button2>a{
         color:white;
@@ -71,4 +65,5 @@ body
         width:200px;
         height:3em;
         padding-top:0.5em;
+		text-decoration:none;
 	}
