--- a/assets/css/mister.css
+++ b/assets/css/mister.css
@@ -28,8 +28,8 @@ header {
 }
 
 .logo {
-	width: 100%;
-	height: 130px;
+	width: 150px;
+	height: 150px;
 	border: 2px solid #FFF;
 
 	/*box-shadow: 3px 6px 20px 0 rgba(0,0,0,.19)*/
